# iwslt2026-metrics-st-submission

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_gpu.sh
scripts/: 01_explore_data.py  01b_explore_data_light.py  01c_explore_parquet.py  01d_download_and_explore.py  02_cometkiwi_baseline.py  03_finetune_cometkiwi.py  03b_finetune_pairwise.py  04_ensemble.py  04b_ensemble_advanced.py  05_xcomet_inference.py  06_blaser_inference.py  07_speech_qe.py  08_generate_submission.py  09_error_analysis.py  09_metricx_inference.py  10_cometkiwi23xxl_inference.py  run_all.py  setup_metricx.sh  ssl_fix.py  test_backward.py
